# db-conductor

./: LICENSE  README.md  pyproject.toml  setup.py  tox.ini
db_conductor/adapters/: base_adapter.py  mongodb_adapter.py  snowfake_adapter.py
examples/: example_mongodb_adapter_usage.py  example_snowflake_adapter_usage.py
tests/: test_snowflake_adapter.py
