[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "db_conductor/_version.py"

[project]
name = "db_conductor"
version = "0.1.0"
description = "A Python adapter tool for database interaction in ETL pipelines"
authors = [
    { name="Pen Hsuan Wang"}
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3.0.0",
    "pandas>=1.3.0",
    "mysql-connector-python",
    "psycopg2-binary",
    "pymongo",
    "snowflake-connector-python",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "tox",
    "flake8",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true

[tool.flake8]
max-line-length = 160
exclude = [".git", "__pycache__", "docs", "db_butler/_version.py"]
ignore = ["E203", "E266", "E501", "W503"]